[package]
name = "tsp_sa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.9"
petgraph = "0.6.0"
fixedbitset = "0.4.0"
itertools = "0.10.1"
itermore = "0.1.0"
rand = "0.8.4"
indicatif = "0.16.2"
imageproc = "0.22.0"
image = "0.23.14"
subprocess = "0.2.8"
rayon = "1.5.1"
permutation_iterator = "0.1.2"

[[bin]]
name = "simulated-annealing"
path = "src/bin/sa.rs"

[[bin]]
name = "genetic-algorithm"
path = "src/bin/ga.rs"

[[bin]]
name = "generate-map"
path = "src/bin/gen.rs"

[[bin]]
name = "visualize"
path = "src/bin/visualize.rs"

[[bin]]
name = "compare"
path = "src/bin/compare.rs"